--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/src/index.d.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register ./test/*.spec.ts",
+    "test": "mocha -r ts-node/register ./test/*.spec.ts -t 6e4 --exit",
     "build": "tsc"
   },
   "repository": {
