--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "typescript": "^3.2.4"
   },
   "dependencies": {
-    "@types/request-promise-native": "^1.0.15",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.5"
+    "axios": "^0.18.0"
   }
 }
